# dualsense_driver

./: CMakeLists.txt  README.md  package.xml
config/: 99-dualsense.rules
scripts/: dualsense_driver.py
