<?xml version="1.0"?>
<package format="2">
  <name>ds_driver</name>
  <version>0.0.0</version>
  <description>The ds_driver package</description>

  <maintainer email="pythagora.yoshimoto@gmail.com">HansRobo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
